# dji_sdk

./: README.md  README.md~
dji_guidance_sdk/: CMakeLists.txt  CMakeLists.txt~  package.xml
dji_guidance_sdk/src/: dji_guidance_node.cpp
dji_guidance_sdk/src/guidance_lib/: DJI_guidance.h
dji_onboard_sdk/: CMakeLists.txt  CMakeLists.txt~  package.xml
dji_onboard_sdk/launch/: sdk_demo.launch~
dji_onboard_sdk/msg/: api_angular_v.msg~  api_cmd_data.msg  api_gps_data.msg~  api_linear_a.msg  api_linear_a.msg~  api_linear_v.msg  api_linear_v.msg~  api_orientation.msg  api_sensor_data.msg~  api_w_data.msg~  gimbal_ctrl_data.msg~  uav_ctrl_data.msg  uav_sensor_data.msg~
dji_onboard_sdk/src/: serial_to_N1.cpp
dji_onboard_sdk/src/0.old_version/: data_interface.h~
dji_onboard_sdk/src/0.old_version/1.serial_api/: serial_FSM.cpp
dji_onboard_sdk/src/0.old_version/3.dji_sdk/: dji_sdk_node.cpp
dji_onboard_sdk/src/0.old_version/4.dji_onboard_sdk/: app1.txt
dji_onboard_sdk/src/0.old_version/4.dji_onboard_sdk/sdk_lib/: DJI_read_info.h
dji_onboard_sdk/src/dji_info_lib/: dji_sdk_app_info.cpp  dji_sdk_app_info.h  dji_sdk_app_info.h~
dji_onboard_sdk/src/dji_sdk_lib/: DJI_Pro_Hw.h
dji_onboard_sdk/src/old_version/: serial_FSM.cpp~
dji_onboard_sdk/src/old_version/1.serial_api/: data_interface.h  data_protocol.cpp
dji_onboard_sdk/src/old_version/2.serial_api/: data_interface2.h  data_protocol2.cpp  serial_FSM2.cpp  serial_FSM3.cpp
dji_onboard_sdk/src/old_version/4.dji_onboard_sdk/: serial_to_N1.cpp
dji_onboard_sdk/src/old_version/4.dji_onboard_sdk/sdk_lib/: DJI_Pro_App.cpp  DJI_Pro_App.h  DJI_Pro_Hw.cpp  sdk_info_load.cpp  sdk_info_load.h
dji_onboard_sdk/src/sdk_lib/: dji_sdk_auxiliary.cpp
dji_ros_demo/src/: djiMain.cpp
